--- a/Lab2/Facebook.html
+++ b/Lab2/Facebook.html
@@ -116,6 +116,42 @@
             color:darkgray;
         }
 
+        .footer {
+            font-family: SFProText-Semibold, Helvetica, Arial, sans-serif;
+            padding-top: 30px;
+            height: 200px;
+            width: 100%;
+        }
+        .footer hr {
+            margin-left: 25vw;
+            margin-right: 25vw;
+        }
+        .footer .lang {
+            margin-left: 25vw;
+            margin-right: 25vw;
+        }
+        .footer a {
+            text-decoration: none;
+            font-size: 12px;
+            color: #8a8d91;
+            margin-right: 13px;
+        }
+        .func {
+            line-height: 17px;
+            margin-left: 25vw;
+            margin-right: 25vw;
+        }
+        .footer a:hover {
+            text-decoration: underline;
+        }
+        .footer .founder {
+            margin-top: 24px;
+            margin-left: 25vw;
+            margin-right: 25vw;
+            font-size: 12px;
+            color: #8a8d91;
+        }
+
     </style>
 </head>
 <body>
@@ -142,6 +178,56 @@
                 <a id ="reg_pages_link" href="https://youtube.com">Создать Страницу</a> знаменитости, музыкальной группы или компании.
             </div>
         </div>
+    </div>
+
+    <div class="footer">
+        <div class="lang">
+            <a href="">Русский</a>
+            <a href="">English (US)</a>
+            <a href="">Türkçe</a>
+            <a href="">Bahasa Indonesia</a>
+            <a href="">中文(简体)</a>
+            <a href="">Қазақша</a>
+            <a href="">Deutsch</a>
+            <a href="">한국어</a>
+            <a href="">Shqip</a>
+            <a href="">Español</a>
+            <a href="">Português (Brasil)</a>
+        </div>
+        <hr>
+        <div class="func">
+            <a href="">Регистрация</a>
+            <a href="">Вход</a>
+            <a href="">Messenger</a>
+            <a href="">Facebook Lite</a>
+            <a href="">Видео</a>
+            <a href="">Места</a>
+            <a href="">Игры</a>
+            <a href="">Marketplace</a>
+            <a href="">Meta Pay</a>
+            <a href="">Meta Store</a>
+            <a href="">Meta Quest</a>
+            <a href="">Imagine with Meta AI</a>
+            <a href="">Instagram</a>
+            <a href="">Threads</a>
+            <a href="">Благотворительные акции</a>
+            <a href="">Услуги</a>
+            <a href="">Центр информации о выборах</a>
+            <a href="">Политика конфиденциальности</a>
+            <a href="">Центр конфиденциальности</a>
+            <a href="">Группы</a>
+            <a href="">Информация</a>
+            <a href="">Создать рекламу</a>
+            <a href="">Создать Страницу</a>
+            <a href="">Разработчикам</a>
+            <a href="">Вакансии</a>
+            <a href="">Файлы cookie</a>
+            <a href="">Рекламные предпочтения</a>
+            <a href="">Условия использования</a>
+            <a href="">Справка</a>
+            <a href="">Загрузка контактов и лица, не являющиеся пользователями</a>
+        </div>
+        <div class="founder">Meta © 2024</div>
     </div>
 
     <script>
